fix expland/collapse button issue

--- a/sass/module/pages/_sidebar.scss
+++ b/sass/module/pages/_sidebar.scss
@@ -152,8 +152,7 @@
     }
 
     .btn-collapse {
-      position: absolute;
-      margin-left: 130px;
+      margin-left: 0;
     }
   }
 
